--- a/cbcs-seminar/styles.css
+++ b/cbcs-seminar/styles.css
@@ -2,7 +2,9 @@
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700);
 
-body { font-family: 'Droid Serif', 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif; }
+body {
+  font-family: 'Droid Serif', 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif;
+}
 h1, h2, h3 {
   font-family: 'Yanone Kaffeesatz';
   font-weight: normal;
@@ -74,4 +76,7 @@ blockquote {
 }
 .remark-slide-number {
   display: none;
+}
+.remark-container {
+  background-color: #272822;
 }
